2011-11-06  Andrew Macleod  <amacleod@redhat.com>
	    Richard Henderson  <rth@redhat.com>
	    Aldy Hernandez  <aldyh@redhat.com>

	Merged from cxx-mem-model.

	* cppbuiltin.c (define__GNUC__): Define __ATOMIC memory models
	* coretypes.h (enum memmodel): New.  enumerated memory model type.
	* Makefile.in (cppbuiltin.o) Add missing dependency on $(TREE_H)
	* genopinit,c (optabs): Add atomic direct optab handlers.
	* sync-builtins.def (BUILT_IN_ATOMIC_*): New builtins.
	* builtin-types.def (BT_CONST_VOLATILE_PTR,
	BT_FN_I{1,2,4,8,16}_CONST_VPTR_INT, BT_FN_VOID_VPTR_INT,
	BT_FN_BOOL_VPTR_INT, BT_FN_BOOL_SIZE_CONST_VPTR,
	BT_FN_I{1,2,4,8,16}_VPTR_I{1,2,4,8,16}_INT,
	BT_FN_VOID_VPTR_I{1,2,4,8,16}_INT, BT_FN_VOID_SIZE_VPTR_PTR_INT,
	BT_FN_VOID_SIZE_CONST_VPTR_PTR_INT, BT_FN_VOID_SIZE_VPTR_PTR_PTR_INT,
	BT_FN_BOOL_VPTR_PTR_I{1,2,4,8,16}_BOOL_INT_INT): New builtin types.
	* expr.h (expand_atomic_*): Add prototypes.
	(expand_{bool,val}_compare_and_swap): Remove prototypes.
	* c-typeck.c (build_function_call_vec): Don't reprocess __atomic
	parameters.
	* common.opt (Winvalid-memory-model): New warning flag.
	(finline-atomics): New. Flag to disable atomic inlining.
	* params.h (ALLOW_LOAD_DATA_RACES): New.
	(ALLOW_PACKED_LOAD_DATA_RACES): New.
	(ALLOW_PACKED_STORE_DATA_RACES): New.
	* params.def (PARAM_ALLOW_LOAD_DATA_RACES): New.
	(PARAM_ALLOW_PACKED_LOAD_DATA_RACES): New.
	(PARAM_ALLOW_PACKED_STORE_DATA_RACES): New.
	* builtins.c (is_builtin_name): Handle __atomic.
	(get_memmodel): New.  Extract memory model.
	(expand_expr_force_mode): New. Factor out common code for ensuring an
	integer argument is in the proper mode.
	(expand_builtin_sync_operation): Remove ignore param.  Always call
	expand_atomic_fetch_op instead of the old expanders.
	(expand_builtin_compare_and_swap,
	expand_builtin_sync_lock_test_and_set): Use expand_expr_force_mode,
	call atomic expanders instead of sync expanders.
	(expand_builtin_sync_lock_release): Call atomic_store expander.